# softdesk-api

./: .gitignore  README.md  pyproject.toml
api/: urls.py
backend/: settings.py
comments/: models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_updated_at.py
config/: settings.py  urls.py
contributors/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
contributors/migrations/: 0001_initial.py  0002_alter_contributor_unique_together_and_more.py
issues/: models.py  serializers.py  urls.py  views.py
issues/migrations/: 0001_initial.py  0002_issue_created_at_issue_updated_at.py
projects/: models.py  permissions.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_contributor.py  0003_delete_contributor.py  0004_project_contributors.py  0005_project_created_at_project_updated_at.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birth_date.py  0003_alter_user_birth_date.py  0004_user_created_at_user_updated_at.py
